# carts

./: .dekk.toml  .editorconfig  .gitignore  .gitmodules  .sniff.toml  AGENTS.md  CLAUDE.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CODEX.md  Makefile  NOTION_TASKS_GUIDE.md  README.md  TODO.md  analysis.md  arts.cfg  enable  environment.yml  fix3a_v3_results.md  ics26.sh  lit.cfg.py  matrix-arts.mlir  output.ll  output.txt  runtime_db_dep_repro  runtime_db_dep_repro.c  simple.c  stream_fix_results.md  taskwithdeps-events.mlir  tier1_fix3a_results.md
carts/: CARTS.cpp  CMakeLists.txt
carts/include/: ARTS.h  ARTSAnalyzer.h  ARTSIRBuilder.h  ARTSKinds.def  ARTSTransform.h  ARTSUtils.h  EDTEdge.h  EDTGraph.h
carts/include/analysis/: ARTS.h  ARTSAnalyzer.h
carts/include/codegen/: ARTSCodegen.h  ARTSKinds.def
carts/include/transform/: OmpTransform.h
carts/include/utils/: ARTSIRBuilder.h
carts/llvm/: CMakeLists.txt  HoistConstantParameters.cpp
carts/opt/: ARTS.cpp  EDTEdge.cpp  EDTGraph.cpp
carts/src/: ARTS.cpp  ARTSAnalyzer.cpp  ARTSIRBuilder.cpp  ARTSTransform.cpp  ARTSUtils.cpp  CMakeLists.txt  EDTEdge.cpp  EDTGraph.cpp
carts/src/analysis/: ARTS.cpp  ARTSAnalysisPass.cpp  ARTSAnalyzer.cpp  CMakeLists.txt
carts/src/codegen/: ARTSCodegen.cpp  CMakeLists.txt
carts/src/opt/: CARTS.cpp
carts/src/transform/: ARTSTransform.cpp  ARTSTransformPass.cpp  CMakeLists.txt  OMPTransform.cpp  OMPTransformPass.cpp  OmpTransform.cpp
carts/src/utils/: ARTS.cpp  ARTSCache.cpp  ARTSIRBuilder.cpp  ARTSMetadata.cpp  ARTSUtils.cpp
carts/src/visitor/: CMakeLists.txt  OMPVisitor.cpp
include/: CMakeLists.txt
include/arts/: ArtsAttributes.td  ArtsDialect.h  ArtsDialect.td  ArtsOps.td  ArtsTypes.td  Attributes.td  CLAUDE.md  CMakeLists.txt  Dialect.h  Dialect.td  Ops.td  Types.td
include/arts/Analysis/: AccessPatternAnalysis.h  ArtsAnalysis.h  ArtsAnalysisManager.h  ArtsHeuristics.h  DataBlockAnalysis.h  DistributionHeuristics.h  EdtAnalysis.h  HeuristicsConfig.h  LoopAnalysis.h  PartitioningHeuristics.h  StringAnalysis.h
include/arts/Codegen/: ARTSKinds.def  ArtsCodegen.h  ArtsIR.h  ArtsKinds.def  ArtsTypes.h  DbCodegen.h  EdtCodegen.h
include/arts/Passes/: ArtsPasses.h  ArtsPasses.td  ArtsUtils.h  CMakeLists.txt  Passes.h  Passes.td
include/arts/Transforms/: ArrayOfPtrsTransformer.h  DbRewriter.h  DbTransforms.h  EdtInvariantCodeMotion.h  EdtPointerRematerialization.h  EdtPtrRematerialization.h  EdtTInvariantCodeMotion.h  EdtTransforms.h  LoopTransforms.h  NestedAllocTransformer.h  OmpDepsTransformer.h
include/arts/Utils/: ARTS.h  ARTSUtils.h  ArtsAbstractMachine.h  ArtsDebug.h  ArtsId.h  ArtsTypes.h  ArtsUtils.h  DatablockUtils.h  DbUtils.h  EdtUtils.h  LoopUtils.h  OpRemovalManager.h  OperationAttributes.h  RemovalUtils.h  ValueUtils.h
include/arts/analysis/: AccessPatternAnalysis.h  Analysis.h  AnalysisDependencies.h  AnalysisManager.h  DistributionHeuristics.h  HeuristicUtils.h  HeuristicsConfig.h  InformationCache.h  PartitioningHeuristics.h  StringAnalysis.h
include/arts/codegen/: Codegen.h  Kinds.def  Types.h
include/arts/dialect/: CMakeLists.txt
include/arts/passes/: CMakeLists.txt  PassDetails.h  Passes.h  Passes.td
include/arts/utils/: BlockedAccessUtils.h  DbUtils.h  Debug.h  EdtUtils.h  IdRegistry.h  LoopInvarianceUtils.h  LoopUtils.h  LoweringContractUtils.h  MetadataAttrNames.h  OperationAttributes.h  PartitionPredicates.h  PassInstrumentation.h  PatternSemantics.h  RemovalUtils.h  StencilAttributes.h  Utils.h  ValueAnalysis.h  ValueUtils.h
include/carts/: ArtsDialect.td  ArtsOps.td  ArtsTypes.td  Dialect.h  Ops.h  Types.h
include/carts/Passes/: ArtsPasses.td  CMakeLists.txt  Passes.h  Utils.h
include/transform/: ARTSTransform.cpp
lib/arts/: ArtsDialect.cpp  CLAUDE.md  CMakeLists.txt  Dialect.cpp
lib/arts/Analysis/: .gitkeep  AccessPatternAnalysis.cpp  AnalysisManager.cpp  ArtsAnalysisManager.cpp  ArtsHeuristics.cpp  CMakeLists.txt  DataBlockAnalysis.cpp  DistributionHeuristics.cpp  EdtAnalysis.cpp  HeuristicUtils.cpp  HeuristicsConfig.cpp  LoopAnalysis.cpp  PartitioningHeuristics.cpp  StringAnalysis.cpp
lib/arts/Codegen/: ArtsCodegen.cpp  ArtsIR.cpp  CMakeLists.txt  DbCodegen.cpp  EdtCodegen.cpp
lib/arts/Passes/: AliasScopeGen.cpp  AlwaysInliner.cpp  AlwaysInliner.h  ArtsAliasScopeGen.cpp  ArtsDataPointerHoisting.cpp  ArtsInliner.cpp  ArtsLoopVectorizationHints.cpp  ArtsPassDetails.h  ArtsScalarReplacement.cpp  CMakeLists.txt  CanonicalizeDbs.cpp  CanonicalizeMemrefs.cpp  CollectMetadata.cpp  Concurrency.cpp  ConvertARTSToFuncs.cpp  ConvertArtsToFuncs.cpp  ConvertArtsToLLVM.cpp  ConvertDbToOpaquePtr.cpp  ConvertOpenMPToARTS.cpp  ConvertOpenMPToArts.cpp  CreateArtsEvents.cpp  CreateDatablocks.cpp  CreateDbs.cpp  CreateEpochs.cpp  CreateEvents.cpp  DataBlock.cpp  DataBlockPass.cpp  DataPointerHoisting.cpp  Datablock.cpp  Db.cpp  DbLowering.cpp  DbPartitioning.cpp  DeadCodeElimination.cpp  Edt.cpp  EdtConcurrency.cpp  EdtInvariantCodeMotion.cpp  (+19 more)
lib/carts/: CMakeLists.txt  Dialect.cpp  Ops.cpp
src/: ARTSTransformer.cpp  CARTS.cpp  CMakeLists.txt
src/files/: ARTSConstants.h  ARTSIRBuilder.cpp  ARTSIRBuilder.h  ARTSTransform.cpp
tools/: CLAUDE.md  CMakeLists.txt  README.md  bootstrap_dekk.py  carts  carts_cli.py  carts_styles.py  examples_runner.py  generate-arts-configs.py  generate-ll-files.py  install_driver.py  pyproject.toml
tools/benchmark/: carts-benchmark.py  jacobi-internode-debug.sh
tools/carts/: CMakeLists.txt  carts.cpp
tools/carts-opt/: CMakeLists.txt  carts-opt.cpp
tools/compile/: CMakeLists.txt  Compile.cpp  carts-compile.cpp  compile.cpp
tools/config/: carts-print.sh
tools/opt/: CMakeLists.txt  carts-opt.cpp
tools/run/: CMakeLists.txt  carts-compile.cpp  carts-run.cpp
tools/scripts/: __init__.py  agents.py  arts_config.py  build.py  check_doc_flags.py  clean.py  compile.py  config.py  deps.py  docker.py  examples.py  format.py  install.py  platform.py  run.py  setup.py  test.py  triage.py  update.py
tools/setup/: carts-setup.py
tools/visualizer/: CMakeLists.txt  README.md  carts-visualizer.cpp
(+2820 files in other folders)
