[tool.poetry]
name = "carts-tools"
version = "0.1.0"
description = "CARTS CLI Tools - Compiler for Asynchronous Runtime Systems"
authors = ["CARTS Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.15.0"
rich = "^13.7.0"
openpyxl = "^3.1.5"

[tool.poetry.scripts]
carts = "carts_cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
