[tool.poetry]
name = "carts-tools"
version = "0.1.0"
description = "CARTS CLI Tools - Compiler for Asynchronous Runtime Systems"
authors = ["CARTS Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.5"
dekk = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
